--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,16 @@
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- for 360 -->
   <meta name="renderer" content="webkit">
+  <!-- stop baidu TransCoding -->
+  <meta http-equiv="Cache-Control" content="no-siteapp">
+  <!-- about me -->
+  <meta name="author" content="Myu, diabolos.man@gmail.com">
+  <!-- index for search engine -->
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
