--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,10 +18,22 @@
           </span>
         </label>
 
-        <div class="trigger">
+        <!-- <div class="trigger">
           {% for path in page_paths %}
             {% assign my_page = site.pages | where: "path", path | first %}
             {% if my_page.title %}
+            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            {% endif %}
+          {% endfor %}
+        </div> -->
+        <div class="trigger">
+          <!--
+              my_page.autogen is populated by the pagination logic for all pages
+                              that are automatically created by the gem. Check for non-existence to exclude pagination pages from site.pages iterators
+            -->
+            
+          {% for my_page in site.pages %}
+            {% if my_page.title and my_page.autogen == nil %}
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {% endif %}
           {% endfor %}
